--- a/index.html
+++ b/index.html
@@ -5,66 +5,76 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <title>WebStudio</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="page-nav">
+        <a class="logo" href="./index.html">WebStudio</a>
+        <ul class="menu-list">
+          <li class="menu-item"><a href="">Studio</a></li>
+          <li class="menu-item"><a href="">Portfolio</a></li>
+          <li class="menu-item"><a href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+      <address class="contsct">
+        <ul class="contsct-list">
+          <li class="contact-mail">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="contact-number">
+            <a href="tel:+110001111111"> +11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
 
-      <section>
-        <h2>Section 2</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
+      <section class="info">
+        <h2 class="info-title">Section 2</h2>
+        <ul class="info-list">
+          <li class="info-item">
+            <h3 class="info-subtitle">Strategy</h3>
 
-            <p>
+            <p class="info-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
-          <li>
-            <h3>Punctuality</h3>
+          <li class="info-item">
+            <h3 class="info-subtitle">Punctuality</h3>
 
-            <p>
+            <p class="info-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
-          <li>
-            <h3>Diligence</h3>
+          <li class="info-item">
+            <h3 class="info-subtitle">Diligence</h3>
 
-            <p>
+            <p class="info-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
-          <li>
-            <h3>Technologies</h3>
+          <li lass="info-item">
+            <h3 class="info-subtitle">Technologies</h3>
 
-            <p>
+            <p class="info-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -72,64 +82,90 @@
         </ul>
       </section>
 
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
-            <img src="./images/pic-1.jpg" alt="desktop site" width="360" />
+      <section class="about">
+        <h2 class="about-title">What are we doing</h2>
+        <ul class="about-list">
+          <li class="about-item">
+            <img
+              class="about-img"
+              src="./images/pic-1.jpg"
+              alt="desktop site"
+              width="360"
+            />
           </li>
 
-          <li>
-            <img src="./images/pic-2.jpg" alt="mobile site" width="360" />
+          <li class="about-item">
+            <img
+              class="about-img"
+              src="./images/pic-2.jpg"
+              alt="mobile site"
+              width="360"
+            />
           </li>
 
-          <li>
-            <img src="./images/pic-3.jpg" alt="mobile app" width="360" />
+          <li class="about-item">
+            <img
+              class="about-img"
+              src="./images/pic-3.jpg"
+              alt="mobile app"
+              width="360"
+            />
           </li>
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/card-1.jpg"
               alt="Product Designer photo"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-position">Product Designer</p>
           </li>
-          <li>
+
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/card-2.jpg"
               alt="Frontend Developer photo"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-position">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/card-3.jpg" alt="Marketer photo" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
+
+          <li class="team-item">
             <img
+              class="team-img"
+              src="./images/card-3.jpg"
+              alt="Marketer photo"
+              width="264"
+            />
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-position">Marketing</p>
+          </li>
+
+          <li class="team-item">
+            <img
+              class="team-img"
               src="./images/card-4.jpg"
               alt="UI Designer photo"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo" href="./index.html">WebStudio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
