--- a/portfolio.html
+++ b/portfolio.html
@@ -23,5 +23,82 @@
       </ul>
     </address>
   </header>
-  <body></body>
+  <body>
+    <section>
+      <ul>
+        <li><button type="button">All</button></li>
+        <li><button type="button">Web Site</button></li>
+        <li><button type="button">App</button></li>
+        <li><button type="button">Design</button></li>
+        <li><button type="button">Marketing</button></li>
+      </ul>
+
+      <ul>
+        <li>
+          <img src="./images/img-1.jpg" alt="" />
+          <h3>Banking App Interface Concept</h3>
+          <p>App</p>
+        </li>
+
+        <li>
+          <img src="./images/img-2.jpg" alt="" />
+          <h3>Cashless Payment</h3>
+          <p>Marketing</p>
+        </li>
+
+        <li>
+          <img src="./images/img-3.jpg" alt="" />
+          <h3>Meditation App</h3>
+          <p>App</p>
+        </li>
+
+        <li>
+          <img src="./images/img-4.jpg" alt="" />
+          <h3>Taxi Service</h3>
+          <p>Marketing</p>
+        </li>
+
+        <li>
+          <img src="./images/img-5.jpg" alt="" />
+          <h3>Screen Illustrations</h3>
+          <p>Design</p>
+        </li>
+
+        <li>
+          <img src="./images/img-6.jpg" alt="" />
+          <h3>Online Courses</h3>
+          <p>Marketing</p>
+        </li>
+
+        <li>
+          <img src="./images/img-7.jpg" alt="" />
+          <h3>Instagram Stories Concept</h3>
+          <p>Design</p>
+        </li>
+
+        <li>
+          <img src="./images/img-8.jpg" alt="" />
+          <h3>Organic Food</h3>
+          <p>Web Site</p>
+        </li>
+
+        <li>
+          <img
+            src="./images/img-9.jpg
+          "
+            alt=""
+          />
+          <h3>Fresh Coffee</h3>
+          <p>Web Site</p>
+        </li>
+      </ul>
+    </section>
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
