--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
   <body>
     <header class="header">
       <nav class="page-nav">
-        <a class="logo" href="./index.html">WebStudio</a>
-        <ul class="menu-list">
-          <li class="menu-item"><a href="">Studio</a></li>
-          <li class="menu-item"><a href="">Portfolio</a></li>
-          <li class="menu-item"><a href="">Contacts</a></li>
+        <a class="logo link" href="./index.html">WebStudio</a>
+        <ul class="menu-list list">
+          <li class="menu-item"><a class="link" href="">Studio</a></li>
+          <li class="menu-item"><a class="link" href="">Portfolio</a></li>
+          <li class="menu-item"><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="contsct">
-        <ul class="contsct-list">
+        <ul class="contsct-list list">
           <li class="contact-mail">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contact-number">
-            <a href="tel:+110001111111"> +11 (000) 111-11-11</a>
+            <a class="link" href="tel:+110001111111"> +11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -38,12 +40,12 @@
     <main>
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <button class="hero-btn button" type="button">Order Service</button>
       </section>
 
       <section class="info">
         <h2 class="info-title">Section 2</h2>
-        <ul class="info-list">
+        <ul class="info-list list">
           <li class="info-item">
             <h3 class="info-subtitle">Strategy</h3>
 
@@ -84,7 +86,7 @@
 
       <section class="about">
         <h2 class="about-title">What are we doing</h2>
-        <ul class="about-list">
+        <ul class="about-list list">
           <li class="about-item">
             <img
               class="about-img"
@@ -116,7 +118,7 @@
 
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <li class="team-item">
             <img
               class="team-img"
@@ -164,7 +166,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html">WebStudio</a>
+      <a class="logo link" href="./index.html">WebStudio</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
