--- a/portfolio.html
+++ b/portfolio.html
@@ -4,98 +4,139 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Portfolio</title>
   </head>
-  <header>
-    <nav>
-      <a href="./index.html">WebStudio</a>
-      <ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
+  <header class="header">
+    <nav class="page-nav">
+      <a class="logo link" href="./index.html">WebStudio</a>
+      <ul class="menu-list list">
+        <li class="menu-item"><a class="link" href="">Studio</a></li>
+        <li class="menu-item"><a class="link" href="">Portfolio</a></li>
+        <li class="menu-item"><a class="link" href="">Contacts</a></li>
       </ul>
     </nav>
 
-    <address>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
+    <address class="contsct">
+      <ul class="contsct-list list">
+        <li class="contact-mail">
+          <a class="link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="contact-number">
+          <a class="link" href="tel:+110001111111"> +11 (000) 111-11-11</a>
+        </li>
       </ul>
     </address>
   </header>
   <body>
-    <section>
-      <ul>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
+    <section class="portfolio">
+      <ul class="filter-list list">
+        <li class="filter-item">
+          <button class="filter-btn button" type="button">All</button>
+        </li>
+        <li class="filter-item">
+          <button class="filter-btn button" type="button">Web Site</button>
+        </li>
+        <li class="filter-item">
+          <button class="filter-btn button" type="button">App</button>
+        </li>
+        <li class="filter-item">
+          <button class="filter-btn button" type="button">Design</button>
+        </li>
+        <li class="filter-item">
+          <button class="filter-btn button" type="button">Marketing</button>
+        </li>
       </ul>
 
-      <ul>
-        <li>
-          <img src="./images/img-1.jpg" alt="" />
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
-        </li>
-
-        <li>
-          <img src="./images/img-2.jpg" alt="" />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
-        </li>
-
-        <li>
-          <img src="./images/img-3.jpg" alt="" />
-          <h3>Meditation App</h3>
-          <p>App</p>
-        </li>
-
-        <li>
-          <img src="./images/img-4.jpg" alt="" />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
-        </li>
-
-        <li>
-          <img src="./images/img-5.jpg" alt="" />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
-        </li>
-
-        <li>
-          <img src="./images/img-6.jpg" alt="" />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
-        </li>
-
-        <li>
-          <img src="./images/img-7.jpg" alt="" />
-          <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
-        </li>
-
-        <li>
-          <img src="./images/img-8.jpg" alt="" />
-          <h3>Organic Food</h3>
-          <p>Web Site</p>
-        </li>
-
-        <li>
+      <ul class="portfolio-list list">
+        <li class="portfolio-card">
           <img
-            src="./images/img-9.jpg
-          "
-            alt=""
+            class="portfolio-img"
+            src="./images/img-1.jpg"
+            alt="banking app"
           />
-          <h3>Fresh Coffee</h3>
-          <p>Web Site</p>
+          <h3 class="portfolio-heading">Banking App Interface Concept</h3>
+          <p class="portfolio-text">App</p>
+        </li>
+
+        <li class="portfolio-card">
+          <img
+            class="portfolio-img"
+            src="./images/img-2.jpg"
+            alt="cashless payment"
+          />
+          <h3 class="portfolio-heading">Cashless Payment</h3>
+          <p class="portfolio-text">Marketing</p>
+        </li>
+
+        <li class="portfolio-card">
+          <img
+            class="portfolio-img"
+            src="./images/img-3.jpg"
+            alt="meditation app"
+          />
+          <h3 class="portfolio-heading">Meditation App</h3>
+          <p class="portfolio-text">App</p>
+        </li>
+
+        <li class="portfolio-card">
+          <img class="portfolio-img" src="./images/img-4.jpg" alt="taxi" />
+          <h3 class="portfolio-heading">Taxi Service</h3>
+          <p class="portfolio-text">Marketing</p>
+        </li>
+
+        <li class="portfolio-card">
+          <img
+            class="portfolio-img"
+            src="./images/img-5.jpg"
+            alt="phone screen"
+          />
+          <h3 class="portfolio-heading">Screen Illustrations</h3>
+          <p class="portfolio-text">Design</p>
+        </li>
+
+        <li class="portfolio-card">
+          <img
+            class="portfolio-img"
+            src="./images/img-6.jpg"
+            alt="girl with phone"
+          />
+          <h3 class="portfolio-heading">Online Courses</h3>
+          <p class="portfolio-text">Marketing</p>
+        </li>
+
+        <li class="portfolio-card">
+          <img
+            class="portfolio-img"
+            src="./images/img-7.jpg"
+            alt="instagram stories"
+          />
+          <h3 class="portfolio-heading">Instagram Stories Concept</h3>
+          <p class="portfolio-text">Design</p>
+        </li>
+
+        <li class="portfolio-card">
+          <img
+            class="portfolio-img"
+            src="./images/img-8.jpg"
+            alt="healthy food"
+          />
+          <h3 class="portfolio-heading">Organic Food</h3>
+          <p class="portfolio-text">Web Site</p>
+        </li>
+
+        <li class="portfolio-card">
+          <img class="portfolio-img" src="./images/img-9.jpg" alt="coffee" />
+          <h3 class="portfolio-heading">Fresh Coffee</h3>
+          <p class="portfolio-text">Web Site</p>
         </li>
       </ul>
     </section>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo" href="./index.html">WebStudio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
