--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
       <nav class="page-nav">
         <a class="logo link" href="./index.html">WebStudio</a>
         <ul class="menu-list list">
-          <li class="menu-item"><a class="link" href="">Studio</a></li>
-          <li class="menu-item"><a class="link" href="">Portfolio</a></li>
+          <li class="menu-item">
+            <a class="link" href="./index.html">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="link" href="./portfolio.html">Portfolio</a>
+          </li>
           <li class="menu-item"><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
