--- a/portfolio.html
+++ b/portfolio.html
@@ -5,14 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Portfolio</title>
   </head>
   <header class="header">
     <nav class="page-nav">
       <a class="logo link" href="./index.html">WebStudio</a>
       <ul class="menu-list list">
-        <li class="menu-item"><a class="link" href="">Studio</a></li>
-        <li class="menu-item"><a class="link" href="">Portfolio</a></li>
+        <li class="menu-item">
+          <a class="link" href="./index.html">Studio</a>
+        </li>
+        <li class="menu-item">
+          <a class="link" href="./portfolio.html">Portfolio</a>
+        </li>
         <li class="menu-item"><a class="link" href="">Contacts</a></li>
       </ul>
     </nav>
@@ -56,6 +66,7 @@
             class="portfolio-img"
             src="./images/img-1.jpg"
             alt="banking app"
+            width="360"
           />
           <h3 class="portfolio-heading">Banking App Interface Concept</h3>
           <p class="portfolio-text">App</p>
@@ -66,6 +77,7 @@
             class="portfolio-img"
             src="./images/img-2.jpg"
             alt="cashless payment"
+            width="360"
           />
           <h3 class="portfolio-heading">Cashless Payment</h3>
           <p class="portfolio-text">Marketing</p>
@@ -76,13 +88,19 @@
             class="portfolio-img"
             src="./images/img-3.jpg"
             alt="meditation app"
+            width="360"
           />
           <h3 class="portfolio-heading">Meditation App</h3>
           <p class="portfolio-text">App</p>
         </li>
 
         <li class="portfolio-card">
-          <img class="portfolio-img" src="./images/img-4.jpg" alt="taxi" />
+          <img
+            class="portfolio-img"
+            src="./images/img-4.jpg"
+            alt="taxi"
+            width="360"
+          />
           <h3 class="portfolio-heading">Taxi Service</h3>
           <p class="portfolio-text">Marketing</p>
         </li>
@@ -92,6 +110,7 @@
             class="portfolio-img"
             src="./images/img-5.jpg"
             alt="phone screen"
+            width="360"
           />
           <h3 class="portfolio-heading">Screen Illustrations</h3>
           <p class="portfolio-text">Design</p>
@@ -102,6 +121,7 @@
             class="portfolio-img"
             src="./images/img-6.jpg"
             alt="girl with phone"
+            width="360"
           />
           <h3 class="portfolio-heading">Online Courses</h3>
           <p class="portfolio-text">Marketing</p>
@@ -112,6 +132,7 @@
             class="portfolio-img"
             src="./images/img-7.jpg"
             alt="instagram stories"
+            width="360"
           />
           <h3 class="portfolio-heading">Instagram Stories Concept</h3>
           <p class="portfolio-text">Design</p>
@@ -122,20 +143,26 @@
             class="portfolio-img"
             src="./images/img-8.jpg"
             alt="healthy food"
+            width="360"
           />
           <h3 class="portfolio-heading">Organic Food</h3>
           <p class="portfolio-text">Web Site</p>
         </li>
 
         <li class="portfolio-card">
-          <img class="portfolio-img" src="./images/img-9.jpg" alt="coffee" />
+          <img
+            class="portfolio-img"
+            src="./images/img-9.jpg"
+            alt="coffee"
+            width="360"
+          />
           <h3 class="portfolio-heading">Fresh Coffee</h3>
           <p class="portfolio-text">Web Site</p>
         </li>
       </ul>
     </section>
     <footer class="footer">
-      <a class="logo" href="./index.html">WebStudio</a>
+      <a class="logo link" href="./index.html">WebStudio</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
