--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </p>
           </li>
 
-          <li lass="info-item">
+          <li class="info-item">
             <h3 class="info-subtitle">Technologies</h3>
 
             <p class="info-text">
