--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </section>
 
       <section class="info">
-        <h2 class="info-title">Section 2</h2>
+        <h2 class="info-title" hidden>Section 2</h2>
         <ul class="info-list list">
           <li class="info-item">
             <h3 class="info-subtitle">Strategy</h3>
