--- a/portfolio.html
+++ b/portfolio.html
@@ -13,155 +13,159 @@
     />
     <title>Portfolio</title>
   </head>
-  <header class="header">
-    <nav class="page-nav">
-      <a class="logo link" href="./index.html">WebStudio</a>
-      <ul class="menu-list list">
-        <li class="menu-item">
-          <a class="link" href="./index.html">Studio</a>
-        </li>
-        <li class="menu-item">
-          <a class="link" href="./portfolio.html">Portfolio</a>
-        </li>
-        <li class="menu-item"><a class="link" href="">Contacts</a></li>
-      </ul>
-    </nav>
-
-    <address class="contsct">
-      <ul class="contsct-list list">
-        <li class="contact-mail">
-          <a class="link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="contact-number">
-          <a class="link" href="tel:+110001111111"> +11 (000) 111-11-11</a>
-        </li>
-      </ul>
-    </address>
-  </header>
 
   <body>
-    <section class="portfolio">
-      <ul class="filter-list list">
-        <li class="filter-item">
-          <button class="filter-btn button" type="button">All</button>
-        </li>
-        <li class="filter-item">
-          <button class="filter-btn button" type="button">Web Site</button>
-        </li>
-        <li class="filter-item">
-          <button class="filter-btn button" type="button">App</button>
-        </li>
-        <li class="filter-item">
-          <button class="filter-btn button" type="button">Design</button>
-        </li>
-        <li class="filter-item">
-          <button class="filter-btn button" type="button">Marketing</button>
-        </li>
-      </ul>
+    <header class="header">
+      <nav class="page-nav">
+        <a class="logo link" href="./index.html">WebStudio</a>
+        <ul class="menu-list list">
+          <li class="menu-item">
+            <a class="link" href="./index.html">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="menu-item"><a class="link" href="">Contacts</a></li>
+        </ul>
+      </nav>
 
-      <ul class="portfolio-list list">
-        <li class="portfolio-card">
-          <img
-            class="portfolio-img"
-            src="./images/img-1.jpg"
-            alt="banking app"
-            width="360"
-          />
-          <h3 class="portfolio-heading">Banking App Interface Concept</h3>
-          <p class="portfolio-text">App</p>
-        </li>
+      <address class="contsct">
+        <ul class="contsct-list list">
+          <li class="contact-mail">
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contact-number">
+            <a class="link" href="tel:+110001111111"> +11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
+    </header>
 
-        <li class="portfolio-card">
-          <img
-            class="portfolio-img"
-            src="./images/img-2.jpg"
-            alt="cashless payment"
-            width="360"
-          />
-          <h3 class="portfolio-heading">Cashless Payment</h3>
-          <p class="portfolio-text">Marketing</p>
-        </li>
+    <main>
+      <section class="portfolio">
+        <h1 hidden>Section Portfolio</h1>
+        <ul class="filter-list list">
+          <li class="filter-item">
+            <button class="filter-btn button" type="button">All</button>
+          </li>
+          <li class="filter-item">
+            <button class="filter-btn button" type="button">Web Site</button>
+          </li>
+          <li class="filter-item">
+            <button class="filter-btn button" type="button">App</button>
+          </li>
+          <li class="filter-item">
+            <button class="filter-btn button" type="button">Design</button>
+          </li>
+          <li class="filter-item">
+            <button class="filter-btn button" type="button">Marketing</button>
+          </li>
+        </ul>
 
-        <li class="portfolio-card">
-          <img
-            class="portfolio-img"
-            src="./images/img-3.jpg"
-            alt="meditation app"
-            width="360"
-          />
-          <h3 class="portfolio-heading">Meditation App</h3>
-          <p class="portfolio-text">App</p>
-        </li>
+        <ul class="portfolio-list list">
+          <li class="portfolio-card">
+            <img
+              class="portfolio-img"
+              src="./images/img-1.jpg"
+              alt="banking app"
+              width="360"
+            />
+            <h3 class="portfolio-heading">Banking App Interface Concept</h3>
+            <p class="portfolio-text">App</p>
+          </li>
 
-        <li class="portfolio-card">
-          <img
-            class="portfolio-img"
-            src="./images/img-4.jpg"
-            alt="taxi"
-            width="360"
-          />
-          <h3 class="portfolio-heading">Taxi Service</h3>
-          <p class="portfolio-text">Marketing</p>
-        </li>
+          <li class="portfolio-card">
+            <img
+              class="portfolio-img"
+              src="./images/img-2.jpg"
+              alt="cashless payment"
+              width="360"
+            />
+            <h3 class="portfolio-heading">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
 
-        <li class="portfolio-card">
-          <img
-            class="portfolio-img"
-            src="./images/img-5.jpg"
-            alt="phone screen"
-            width="360"
-          />
-          <h3 class="portfolio-heading">Screen Illustrations</h3>
-          <p class="portfolio-text">Design</p>
-        </li>
+          <li class="portfolio-card">
+            <img
+              class="portfolio-img"
+              src="./images/img-3.jpg"
+              alt="meditation app"
+              width="360"
+            />
+            <h3 class="portfolio-heading">Meditation App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
 
-        <li class="portfolio-card">
-          <img
-            class="portfolio-img"
-            src="./images/img-6.jpg"
-            alt="girl with phone"
-            width="360"
-          />
-          <h3 class="portfolio-heading">Online Courses</h3>
-          <p class="portfolio-text">Marketing</p>
-        </li>
+          <li class="portfolio-card">
+            <img
+              class="portfolio-img"
+              src="./images/img-4.jpg"
+              alt="taxi"
+              width="360"
+            />
+            <h3 class="portfolio-heading">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
 
-        <li class="portfolio-card">
-          <img
-            class="portfolio-img"
-            src="./images/img-7.jpg"
-            alt="instagram stories"
-            width="360"
-          />
-          <h3 class="portfolio-heading">Instagram Stories Concept</h3>
-          <p class="portfolio-text">Design</p>
-        </li>
+          <li class="portfolio-card">
+            <img
+              class="portfolio-img"
+              src="./images/img-5.jpg"
+              alt="phone screen"
+              width="360"
+            />
+            <h3 class="portfolio-heading">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
 
-        <li class="portfolio-card">
-          <img
-            class="portfolio-img"
-            src="./images/img-8.jpg"
-            alt="healthy food"
-            width="360"
-          />
-          <h3 class="portfolio-heading">Organic Food</h3>
-          <p class="portfolio-text">Web Site</p>
-        </li>
+          <li class="portfolio-card">
+            <img
+              class="portfolio-img"
+              src="./images/img-6.jpg"
+              alt="girl with phone"
+              width="360"
+            />
+            <h3 class="portfolio-heading">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
 
-        <li class="portfolio-card">
-          <img
-            class="portfolio-img"
-            src="./images/img-9.jpg"
-            alt="coffee"
-            width="360"
-          />
-          <h3 class="portfolio-heading">Fresh Coffee</h3>
-          <p class="portfolio-text">Web Site</p>
-        </li>
-      </ul>
-    </section>
+          <li class="portfolio-card">
+            <img
+              class="portfolio-img"
+              src="./images/img-7.jpg"
+              alt="instagram stories"
+              width="360"
+            />
+            <h3 class="portfolio-heading">Instagram Stories Concept</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+
+          <li class="portfolio-card">
+            <img
+              class="portfolio-img"
+              src="./images/img-8.jpg"
+              alt="healthy food"
+              width="360"
+            />
+            <h3 class="portfolio-heading">Organic Food</h3>
+            <p class="portfolio-text">Web Site</p>
+          </li>
+
+          <li class="portfolio-card">
+            <img
+              class="portfolio-img"
+              src="./images/img-9.jpg"
+              alt="coffee"
+              width="360"
+            />
+            <h3 class="portfolio-heading">Fresh Coffee</h3>
+            <p class="portfolio-text">Web Site</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <footer class="footer">
       <a class="logo link" href="./index.html">WebStudio</a>
       <p class="footer-text">
