--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
   <body>
     <header class="header">
       <nav class="page-nav">
-        <a class="logo link" href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html">Web<span class="logo-black">Studio</span></a>
         <ul class="menu-list list">
           <li class="menu-item">
-            <a class="link" href="./index.html">Studio</a>
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="link" href="./portfolio.html">Portfolio</a>
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="menu-item"><a class="link" href="">Contacts</a></li>
+          <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="contsct">
         <ul class="contsct-list list">
           <li class="contact-mail">
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="contack-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="contact-number">
-            <a class="link" href="tel:+110001111111"> +11 (000) 111-11-11</a>
+            <a class="contack-link link" href="tel:+110001111111"> +11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
