--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo link" href="./index.html">WebStudio</a>
+      <a class="logo link" href="./index.html">Web<span class="logo-black">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
