--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="header">
       <nav class="page-nav">
-        <a class="logo link" href="./index.html">Web<span class="logo-black">Studio</span></a>
+        <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
         <ul class="menu-list list">
           <li class="menu-item">
             <a class="menu-link link" href="./index.html">Studio</a>
@@ -170,7 +170,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo link" href="./index.html">Web<span class="logo-black">Studio</span></a>
+      <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
