--- a/portfolio.html
+++ b/portfolio.html
@@ -167,7 +167,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo link" href="./index.html">WebStudio</a>
+      <a class="logo link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
