add link to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,27 +17,27 @@
   <body>
     <header class="header">
       <nav class="page-nav">
-        <a class="logo link" href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html">Web<span class="logo-header">Studio</span></a>
         <ul class="menu-list list">
           <li class="menu-item">
-            <a class="link" href="./index.html">Studio</a>
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="link" href="./portfolio.html">Portfolio</a>
+            <a class="menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="menu-item"><a class="link" href="">Contacts</a></li>
+          <li class="menu-item"><a class="menu-link link" href="">Contacts</a></li>
         </ul>
       </nav>
 
       <address class="contsct">
         <ul class="contsct-list list">
           <li class="contact-mail">
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="contack-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="contact-number">
-            <a class="link" href="tel:+110001111111"> +11 (000) 111-11-11</a>
+            <a class="contack-link link" href="tel:+110001111111"> +11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -46,7 +46,7 @@
     <main>
       <section class="portfolio">
         <h1 hidden>Section Portfolio</h1>
-        <ul class="filter-list list">
+        <ul class="filter-list list">v
           <li class="filter-item">
             <button class="filter-btn button" type="button">All</button>
           </li>
@@ -66,14 +66,15 @@
 
         <ul class="portfolio-list list">
           <li class="portfolio-card">
+            <a class="portfolio-link link" href=""> 
             <img
               class="portfolio-img"
               src="./images/img-1.jpg"
               alt="banking app"
               width="360"
             />
-            <h3 class="portfolio-heading">Banking App Interface Concept</h3>
-            <p class="portfolio-text">App</p>
+            <h2 class="portfolio-heading">Banking App Interface Concept</h2>
+            <p class="portfolio-text">App</p></a>
           </li>
 
           <li class="portfolio-card">
