add link to cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,91 +78,99 @@
           </li>
 
           <li class="portfolio-card">
-            <img
+            <a class="portfolio-link link" href=""> 
+              <img
               class="portfolio-img"
               src="./images/img-2.jpg"
               alt="cashless payment"
               width="360"
             />
             <h3 class="portfolio-heading">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
+            <p class="portfolio-text">Marketing</p></a>
           </li>
 
           <li class="portfolio-card">
-            <img
+            <a class="portfolio-link link" href=""> 
+              <img
               class="portfolio-img"
               src="./images/img-3.jpg"
               alt="meditation app"
               width="360"
             />
             <h3 class="portfolio-heading">Meditation App</h3>
-            <p class="portfolio-text">App</p>
+            <p class="portfolio-text">App</p></a>
           </li>
 
           <li class="portfolio-card">
-            <img
+            <a class="portfolio-link link" href=""> 
+              <img
               class="portfolio-img"
               src="./images/img-4.jpg"
               alt="taxi"
               width="360"
             />
             <h3 class="portfolio-heading">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
+            <p class="portfolio-text">Marketing</p></a>
           </li>
 
           <li class="portfolio-card">
-            <img
+            <a class="portfolio-link link" href=""> 
+              <img
               class="portfolio-img"
               src="./images/img-5.jpg"
               alt="phone screen"
               width="360"
             />
             <h3 class="portfolio-heading">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
+            <p class="portfolio-text">Design</p></a>
           </li>
 
           <li class="portfolio-card">
-            <img
+            <a class="portfolio-link link" href=""> 
+              <img
               class="portfolio-img"
               src="./images/img-6.jpg"
               alt="girl with phone"
               width="360"
             />
             <h3 class="portfolio-heading">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
+            <p class="portfolio-text">Marketing</p></a>
           </li>
 
           <li class="portfolio-card">
-            <img
+            <a class="portfolio-link link" href=""> 
+              <img
               class="portfolio-img"
               src="./images/img-7.jpg"
               alt="instagram stories"
               width="360"
             />
             <h3 class="portfolio-heading">Instagram Stories Concept</h3>
-            <p class="portfolio-text">Design</p>
+            <p class="portfolio-text">Design</p></a>
           </li>
 
           <li class="portfolio-card">
-            <img
+            <a class="portfolio-link link" href=""> 
+              <img
               class="portfolio-img"
               src="./images/img-8.jpg"
               alt="healthy food"
               width="360"
             />
             <h3 class="portfolio-heading">Organic Food</h3>
-            <p class="portfolio-text">Web Site</p>
+            <p class="portfolio-text">Web Site</p></a>
           </li>
 
           <li class="portfolio-card">
-            <img
+            <a class="portfolio-link link" href=""> 
+              <img
               class="portfolio-img"
               src="./images/img-9.jpg"
               alt="coffee"
               width="360"
             />
             <h3 class="portfolio-heading">Fresh Coffee</h3>
-            <p class="portfolio-text">Web Site</p>
+            <p class="portfolio-text">Web Site</p></a>
           </li>
         </ul>
       </section>
