add changes to cards

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </ul>
       </nav>
 
-      <address class="contsct">
-        <ul class="contsct-list list">
+      <address class="contact">
+        <ul class="contact-list list">
           <li class="contact-mail">
             <a class="contack-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
