--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
     <main>
       <section class="portfolio">
         <h1 hidden>Section Portfolio</h1>
-        <ul class="filter-list list">v
+        <ul class="filter-list list">
           <li class="filter-item">
             <button class="filter-btn button" type="button">All</button>
           </li>
